# apiana-ai

./: .gitignore  CLAUDE.md  CONTEXTUAL_TAGGING.md  KNOWLEDGE_GRAPH_PLAN.md  Makefile  README.md  docker-compose.yml  launch_gradio.py  launch_ui.py  main.py  parallel_inference_design.md  pipelines.py  playwright.config.py  pyproject.toml  run_all_tests.py  test_di_config.py
apiana/: __init__.py  chatgpt_export_cli.py  configuration.py  decorators.py  lease_manager.py  system.py  utils.py
apiana/applications/: gradio_ui.py
apiana/applications/batch/: __init__.py
apiana/applications/batch/pipelines/: __init__.py  chatgpt_processing.py  chatgpt_processing_with_writers.py
apiana/applications/chatgpt_export/: cli.py  cli_v2.py  tui.py
apiana/applications/chatgpt_export_tui/: tui.py
apiana/applications/gradio/: __init__.py  app.py  pipeline_discovery.py  ui_components.py
apiana/applications/themes/: rugrat.py
apiana/batch/: crap.py
apiana/batch/chatgpt/: chatgpt_export_loader.py  chatgpt_export_parsing.py  chatgpt_export_processor.py
apiana/batch/summary/: summary_generator.py
apiana/core/: __init__.py
apiana/core/adapters/: __init__.py  chat_fragment_store_adapter.py
apiana/core/components/: __init__.py
apiana/core/components/chunkers/: __init__.py  base.py  conversation.py
apiana/core/components/common/: __init__.py  base.py
apiana/core/components/managers/: __init__.py  pipeline_run_manager.py
apiana/core/components/readers/: __init__.py  base.py  chatgpt.py  fragment.py  text.py
apiana/core/components/transform/: __init__.py  base.py  batch_embedding.py  batch_inference.py  batch_summary.py  embedder.py  summarizer.py  validator.py
apiana/core/components/writers/: __init__.py  base.py  chat_fragment_writer.py  memory_block_writer.py  pipeline_run_writer.py
apiana/core/pipelines/: __init__.py  base.py
apiana/core/providers/: __init__.py  base.py  batched_local.py  local.py  local_embedding.py  openai.py
apiana/core/services/: __init__.py
apiana/di/: __init__.py  container.py  modules.py
apiana/embeddings/: local_embedder.py
apiana/flows/: chatgpt_export_processor.py  conversation_operations.py
apiana/llm/: openai_client.py
apiana/pipeline/: components.py
apiana/storage/: neo4j_store.py  task_cache.py
apiana/stores/: __init__.py
apiana/stores/neo4j/: __init__.py  agent_memory_store.py  application_store.py
apiana/types/: chat_fragment.py  chatgpt_conversation.py  common.py  configuration.py  memory_block.py
configs/: dev.toml  local.toml  production.toml
docs/: AI_ASSISTANT_MEMORY.md  CHATFORMAT_MIGRATION_IMPLEMENTATION.md  CONFIGURATION.md  DEVELOPMENT_PLAN.md  HAYSTACK_MIGRATION_PLAN.md  LLM-UI-Comparison.md  MEMORY_VERSIONING_PLAN.md
examples/: length-controlled-prompts.md
export_processor/chatgpt/: schema.py  tui.py
export_processor/flows/: conversation_processor.py
export_processor/storage/: neo4j_store.py
modelfiles/: README.md  mistral-7b-assistant.Modelfile  mistral-7b-merged.Modelfile  mistral-7b-v0.1.Modelfile  mistral-concise.Modelfile  mistral-small-24b.Modelfile  mistral-variants.sh  osmosis-mcp-4b.Modelfile
prompts/: self-reflective-assistant.txt  self-reflective-prompt-template.txt  self-reflective-system-message.txt
scripts/: calculate-tokens.py  chunk-and-summarize.py  clear-debug  generate-modelfile.sh  import-models-to-ollama.sh  install-open-webui.sh  long-context-solution.sh  modelfile_generator.py  neo4j_browser_queries.cypher  ollama-debug.sh  ollama-log-viewer.sh  ollama-proxy-logger.py  ollama-token-config.sh  ollama-with-system.py  ollama_client_example.py  ollama_token_aware.py  optimize-ollama-models.sh  set-debug  setup-remote-ollama.sh  test-long-context.sh  test_neo4j_connection.py
system-prompts/: coding-assistant.txt  creative-writer.txt  data-scientist.txt  research-assistant.txt
tests/: test_chatgpt_conversation.py  test_chatgpt_export_loader.py  test_chatgpt_export_parsing.py  test_chatgpt_export_processor.py  test_cli.py  test_neo4j_store_integration.py  test_neo4j_store_unit.py
tests/fixtures/: test-system-prompt.txt  test-user-prompt.txt
tests/integration/: __init__.py
tests/ui_automation/: __init__.py  test_gradio_pipeline_execution.py
tests/unit/applications/batch/pipelines/: test_chatgpt_processing.py
tests/unit/applications/gradio/: __init__.py  test_pipeline_discovery.py
tests/unit/core/adapters/: __init__.py  test_chat_fragment_store_adapter.py
tests/unit/core/components/: test_base.py  test_chunkers.py  test_processors.py  test_readers.py
tests/unit/core/components/transform/: __init__.py  test_batch_embedding.py  test_batch_inference.py  test_batch_summary.py
tests/unit/core/components/writers/: __init__.py  (+3 more)
tests/unit/core/pipelines/: __init__.py  test_base.py  test_pipeline_builder.py  test_type_validation.py
tests/unit/core/providers/: test_batched_local.py  test_local_embedding.py
tests/unit/core/services/: __init__.py
tests/unit/stores/: __init__.py
tests/unit/stores/neo4j/: __init__.py  test_application_store.py  test_embedding_functionality.py
