[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "apiana-ai"
dynamic = ["version"]
description = "Apiana AI: Self reflective AI companion."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "atomics>=1.0.3",
    "injector>=0.22.0",
    "neo4j>=5.28.1",
    "neo4j-graphrag>=1.7.0",
    "neomodel>=5.4.5",
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "pydevd-pycharm~=251.25410.159",
    "sentence-transformers>=4.1.0",
    "textual>=3.2.0",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]

[project.scripts]
chatgpt-export = "apiana.applications.chatgpt_export.cli:main"
chatgpt-export-tui = "apiana.applications.chatgpt_export.tui:main"

[tool.uv.sources]
apiana = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["apiana"]

[tool.hatch.build]
packages = ["apiana"]
include = [

    "LICENSE",
    "README.md"
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
    "hatch>=1.14.1",
    "textual-dev>=1.7.0",
    "debugpy>=1.8.14",
    "pytest>=8.3.5",
]
